<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="101dp"
        app:layout_constraintBottom_toTopOf="@+id/etNombresReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <EditText
        android:id="@+id/etNombresReg"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="25dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/tx_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etCorreoReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/etPasswordReg"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="85dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/tx_pwd"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btSaveReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreoReg" />

    <EditText
        android:id="@+id/etCorreoReg"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="24dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/tx_correo"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombresReg" />

    <Button
        android:id="@+id/btSaveReg"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="59dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordReg" />
</androidx.constraintlayout.widget.ConstraintLayout>