<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginBottom="62dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bt2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:gravity="center"
        android:text="@string/title_reg"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spConsultorio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Spinner
        android:id="@+id/spConsultorio"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toTopOf="@+id/spMedico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="29dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/tx_fecha"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etHora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spMedico" />

    <EditText
        android:id="@+id/etHora"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="52dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/tx_hora"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btSaveCita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFecha" />

    <Spinner
        android:id="@+id/spMedico"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toTopOf="@+id/etFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spConsultorio" />

    <Button
        android:id="@+id/btSaveCita"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="79dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHora" />

</androidx.constraintlayout.widget.ConstraintLayout>